apps/leantime/service-leantime.yaml
apiVersion: v1
kind: Service
metadata:
  name: leantime
  namespace: leantime
spec:
  selector:
    app: leantime
  ports:
    - port: 80
      targetPort: 80
